--- a/src/css/common.css
+++ b/src/css/common.css
@@ -20,6 +20,7 @@ input {
 .center {
   position: relative;
   width: 100%;
-  max-width: 1200px;
+  max-width: 1400px;
+  min-width: 1000px;
   margin: 0 auto;
 }
