--- a/src/css/font.css
+++ b/src/css/font.css
@@ -15,7 +15,8 @@ select,
 button {
   font-family: "Spoqa Han Sans Neo", "Noto Sans KR", Apple Gothic, "sans-serif";
   font-size: 14px;
-  color: #2a2a2a;
+  /* color: #2a2a2a; */
+  color: #313131;
   line-height: 1.3;
   letter-spacing: -0.02rem;
 }
