--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,6 +2,7 @@
 
 @import url("./reset.css");
 @import url("./font.css");
+@import url("./font-embedded.css");
 @import url("./common.css");
 @import url("./layout.css");
 
@@ -9,49 +10,38 @@
 #main .content-section.section-sample {
   width: 50%;
 }
-#main .content-section.section-sample .section-wrap {
+#main .content-section.section-sample .content-article {
   height: 300px;
 }
 
 /** COMMON **/
-#main .content-section .section-wrap {
-  width: 100%;
-  padding: 20px 20px 24px;
-  background-color: #fff;
-  border-radius: 18px;
-  box-shadow: 1px 3px 12px rgba(88, 88, 88, 0.2);
-  box-sizing: border-box;
-}
-.section-wrap .section-wrap-inner {
-  width: 100%;
-}
-.section-wrap-inner .section-title {
-  margin-bottom: 14px;
-}
-.section-wrap-inner .section-title > h3,
-.section-wrap-inner .section-title > .title-more {
-  display: inline-block;
-}
-.section-wrap-inner .section-title > h3 {
-  font-size: 18px;
-  font-weight: 600;
-}
-.section-wrap-inner .section-title > .title-more {
-  margin-left: 14px;
-  font-size: 14px;
-  font-weight: 500;
-  color: #919191;
-}
 
 /** HOME-PAGE **/
-#main {
-  background-color: #f4f5f5;
-  min-height: 900px;
-}
-#main.intro-page {
+#wrap {
+  width: 100%;
+  /* background-color: #f4f5f5; */
   background-color: #f7f8f8;
 }
 
+#main {
+  min-height: 900px;
+}
+#main.intro-page {
+  /* width: 100%; */
+  /* max-width: 1000px; */
+  width: 1000px;
+  /* padding: 20vh 14px 0; */
+  padding: 12vh 14px 0;
+  margin: 0 auto;
+  box-sizing: border-box;
+  /* background-color: #f7f8f8; */
+}
+
+/** INTRO PAGE **/
+/* INTRO PAGE > login section */
+#main.intro-page .intro-section {
+  margin-bottom: 70px;
+}
 #main.intro-page .intro-section .section-content {
   width: 342px;
   margin: 0 auto;
@@ -65,12 +55,123 @@
   width: 100%;
 }
 
-.intro-section .section-content .intro-search > input {
+.intro-section .section-content .intro-search > input,
+.intro-section .section-content .intro-login > button {
   width: 100%;
   height: 50px;
   border-radius: 25px;
-  border: 2px solid #24cd88;
+  font-size: 15px;
+}
+.intro-section .section-content .intro-search > input {
+  border: 1px solid #24cd88;
   background-color: #fff;
   text-indent: 24px;
+}
+.intro-section
+  .section-content
+  .intro-search
+  > input::-webkit-input-placeholder {
+  color: #ccc;
+}
+.intro-section .section-content .intro-search > input::-ms-input-placeholder {
+  color: #ccc;
+}
+.intro-section .section-content .intro-search > input::placeholder {
+  color: #ccc;
+  font-weight: 300;
+}
+
+.intro-section .section-content .intro-login {
+  margin-top: 14px;
+}
+.intro-login > button {
+  display: none;
+  border: 1px solid #24cd88;
+  background-color: #24cd88;
+  color: #fff;
+}
+.intro-login > button.now-on {
+  display: block;
+}
+
+.intro-section .section-content .intro-login-option {
+  margin-top: 14px;
+  font-size: 0;
+}
+.intro-section .section-content .intro-login-option > p {
+  display: inline-block;
+}
+.intro-section .section-content .intro-login-option > p > * {
+  font-size: 13px;
+  color: #888;
+  vertical-align: middle;
+  /* font-weight: 300; */
+}
+.intro-login-option > .id-remember {
+  width: 40%;
+}
+.intro-login-option > .id-remember > input {
+  width: 13px;
+  height: 13px;
+  margin: 0;
+  margin-right: 4px;
+  background: #fff;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+}
+.intro-login-option > .find-user-info {
+  width: 40%;
+}
+.intro-login-option > .join-us {
+  /* float: right; */
+  width: 20%;
+  text-align: right;
+}
+
+/* INTRO PAGE > contents section */
+#main .content-section .content-article.intro-keyword-now {
+  padding-bottom: 16px;
+}
+.intro-keyword-now .rank-list {
+  width: 82%;
+  margin: 0 auto;
+}
+.intro-keyword-now .rank-item {
+  margin-bottom: 8px;
+  border-radius: 8px;
+  background-color: #f7f8f8;
+}
+.intro-keyword-now .rank-item:first-child,
+.intro-keyword-now .rank-item:nth-child(2),
+.intro-keyword-now .rank-item:nth-child(3) {
+  border: 1px solid #24cd88;
+  font-weight: 500;
+}
+.intro-keyword-now .rank-item:first-child {
+  /* border: 1px solid #fbc400; */
+}
+.intro-keyword-now .rank-item:nth-child(2) {
+  /* border: 1px solid #b5b8bc; */
+}
+.intro-keyword-now .rank-item:nth-child(3) {
+  /* border: 1px solid #caa789; */
+}
+.intro-keyword-now .rank-item > .link-area {
+  display: table;
+  width: 100%;
+  table-layout: fixed;
+  line-height: 35px;
+  font-size: 0;
+}
+.intro-keyword-now .rank-item > .link-area > * {
+  display: inline-block;
+  text-align: center;
   font-size: 15px;
+  vertical-align: middle;
+}
+.intro-keyword-now .rank-item .item-standing {
+  width: 40%;
+}
+.intro-keyword-now .rank-item .item-title {
+  width: 60%;
 }
