--- a/src/css/style.css
+++ b/src/css/style.css
@@ -25,6 +25,10 @@
 
 #main {
   min-height: 900px;
+  width: 1200px;
+  padding: 30px 14px;
+  margin: 0 auto;
+  box-sizing: border-box;
 }
 #main.intro-page {
   /* width: 100%; */
@@ -32,8 +36,6 @@
   width: 1000px;
   /* padding: 20vh 14px 0; */
   padding: 12vh 14px 0;
-  margin: 0 auto;
-  box-sizing: border-box;
   /* background-color: #f7f8f8; */
 }
 
@@ -132,6 +134,9 @@
 #main .content-section .content-article.intro-keyword-now {
   padding-bottom: 16px;
 }
+#main.intro-page .section-inner {
+  display: block;
+}
 .intro-keyword-now .rank-list {
   width: 82%;
   margin: 0 auto;
@@ -175,3 +180,69 @@
 .intro-keyword-now .rank-item .item-title {
   width: 60%;
 }
+
+/** CONTENT PAGE >> NOW PAGE **/
+/* CONTENT PAGE >> tab section */
+#main .tab-section {
+  font-size: 0;
+}
+.tab-section article {
+  display: inline-block;
+  width: 50%;
+  margin-bottom: 24px;
+  font-size: 14px;
+}
+.tab-article .tab-list {
+  margin-bottom: 20px;
+  font-size: 0;
+}
+.tab-article .tab-list .tab-item {
+  display: inline-block;
+  padding: 13px 36px;
+  font-size: 26px;
+  font-weight: 600;
+  color: #919191;
+}
+.tab-article .tab-list .tab-hottest {
+  padding: 13px 28px;
+}
+.tab-article .tab-list .tab-item.now-on {
+  border-radius: 18px;
+  background-color: #fff;
+  color: #24cd88;
+  box-shadow: 1px 3px 12px rgba(88, 88, 88, 0.2);
+}
+.tab-article .tab-info-list {
+  padding: 0 36px;
+}
+.tab-article .tab-info-list .tab-info-item {
+  display: none;
+  line-height: 1.5;
+  font-size: 18px;
+  font-weight: 300;
+}
+.tab-article .tab-info-list .tab-info-item.now-on {
+  display: block;
+}
+
+#main .tab-section .tab-title-article {
+  height: 146px;
+  background-color: #fff;
+  padding-left: 36px;
+  padding-right: 36px;
+}
+.tab-title-article .article-inner {
+  height: 100%;
+}
+.tab-title-article .article-content {
+  display: flex;
+  align-items: center;
+  height: 100%;
+}
+.tab-title-article .tab-title {
+  font-size: 20px;
+}
+
+/** CONTENT PAGE >> TREND PAGE **/
+
+/** CONTENT PAGE >> HOTTEST PAGE **/
