--- a/src/css/common.css
+++ b/src/css/common.css
@@ -40,11 +40,46 @@ button:hover {
   cursor: pointer;
 }
 
+input[type="text"]::-webkit-input-placeholder {
+  color: #ccc;
+}
+input[type="text"]::-ms-input-placeholder {
+  color: #ccc;
+}
+input[type="text"]::placeholder {
+  color: #ccc;
+  font-weight: 300;
+}
+input[type="text"],
+input[type="date"] {
+  background-color: #f7f8f8;
+}
+input[type="date"] {
+  color: #888;
+}
+input[type="date"]::-webkit-calendar-picker-indicator {
+  /* border: 1px solid #ccc; */
+  border-radius: 2px;
+  /* box-shadow: inset 0 1px #fff, 0 1px #eee; */
+  /* background-color: #eee; */
+  background-image: url(../img/icon/Icon-calendar.svg);
+  color: #666;
+}
+
+*:hover {
+  /* transition: 0.4s; */
+}
+
 /* section */
 #main .content-section .section-inner {
+  display: flex;
   position: relative;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  gap: 24px;
 }
-#main .content-section .content-article {
+
+#main .content-article {
   display: inline-block;
   width: 100%;
   padding: 20px 20px 24px;
@@ -77,13 +112,28 @@ button:hover {
   vertical-align: middle;
   color: #888;
 }
-#main .content-section .content-article.width-3-2 {
+#main .content-article.width-2-1 {
+  width: calc(50% - 12px);
+}
+#main .content-article.width-3-2 {
   width: calc(66.66666% - 12px);
 }
-#main .content-section .content-article.width-3-1 {
+#main .content-article.width-3-1 {
   width: calc(33.33333% - 12px);
 }
-.section-inner::after,
+#main .content-article.width-4-3 {
+  width: calc(75% - 12px);
+}
+#main .content-article.width-4-2 {
+  width: calc(50% - 12px);
+}
+#main .content-article.width-4-1 {
+  width: calc(25% - 12px);
+}
+
+/* .section-inner::after, */
+#main.intro-page .section-inner::after,
+.tab-section .section-inner::after,
 .content-article .article-title::after {
   content: "";
   display: block;
@@ -134,4 +184,27 @@ button:hover {
 /* text style */
 .txt-gr {
   color: #24cd88;
+}
+
+.txt-highlight {
+  display: inline-block;
+  position: relative;
+  font-weight: 600;
+  z-index: 1;
+}
+.txt-highlight::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 102%;
+  height: 65%;
+  background-color: #dcfef1;
+  /* opacity: 0.8; */
+  z-index: -1;
+}
+.txt-num {
+  font-size: 1.5em;
 }
