--- a/src/css/common.css
+++ b/src/css/common.css
@@ -40,6 +40,39 @@ button:hover {
   cursor: pointer;
 }
 
+.cls-btn {
+  position: absolute;
+  top: 0;
+  right: 10px;
+  width: 34px;
+  height: 34px;
+  border: none;
+  border-radius: 10px;
+  background: none;
+  background-color: #fff;
+  text-indent: -99999px;
+}
+.cls-btn:hover {
+  box-shadow: 1px 3px 12px rgba(128, 128, 128, 0.2);
+}
+.cls-btn::before,
+.cls-btn::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 2px;
+  height: 28px;
+  background-color: #555;
+}
+.cls-btn::before {
+  transform: translate(-50%, -50%) rotate(45deg);
+}
+.cls-btn::after {
+  transform: translate(-50%, -50%) rotate(-45deg);
+}
+
 input[type="text"]::-webkit-input-placeholder {
   color: #ccc;
 }
@@ -65,6 +98,12 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   background-image: url(../img/icon/Icon-calendar.svg);
   color: #666;
 }
+/* input[type="text"]:focus,
+input[type="date"]:focus,
+input[type="text"]:hover,
+input[type="date"]:hover {
+  border: 1px solid #24cd88;
+} */
 
 *:hover {
   /* transition: 0.4s; */
@@ -82,6 +121,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 #main .content-article {
   display: inline-block;
   width: 100%;
+  /* min-height: 250px; */
   padding: 20px 20px 24px;
   margin-bottom: 24px;
   background-color: #fff;
@@ -129,6 +169,24 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 #main .content-article.width-4-1 {
   width: calc(25% - 12px);
+}
+
+.add-icon {
+  display: inline-block;
+  vertical-align: top;
+}
+.add-icon::before {
+  content: "";
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  margin-right: 6px;
+  /* background: no-repeat center/contain url("../img/icon/icon-preset.svg"); */
+  background-image: url("../img/icon/icon-preset.svg");
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  vertical-align: -1px;
 }
 
 /* .section-inner::after, */
@@ -185,6 +243,9 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 .txt-gr {
   color: #24cd88;
 }
+.txt-grey {
+  color: #a0a0a0;
+}
 
 .txt-highlight {
   display: inline-block;
@@ -207,4 +268,21 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 .txt-num {
   font-size: 1.5em;
+}
+
+/* chart color */
+.cht-grey {
+  background-color: #a0a0a0;
+}
+.cht-gr {
+  background-color: #63eab1;
+}
+.cht-bl {
+  background-color: #699ff1;
+}
+.cht-yl {
+  background-color: #f1f169;
+}
+.cht-or {
+  background-color: #f19f69;
 }
