--- a/src/css/font.css
+++ b/src/css/font.css
@@ -14,6 +14,7 @@ textarea,
 select,
 button {
   font-family: "Spoqa Han Sans Neo", "Noto Sans KR", Apple Gothic, "sans-serif";
+  /* font-family: "Noto Sans KR", Apple Gothic, "sans-serif"; */
   font-size: 14px;
   /* color: #2a2a2a; */
   color: #313131;
