--- a/src/css/style.css
+++ b/src/css/style.css
@@ -229,7 +229,7 @@ body {
 .tab-article .tab-list .tab-item {
   display: inline-block;
   padding: 11px 34px;
-  font-size: 21px;
+  font-size: 24px;
   font-weight: 600;
   color: #919191;
 }
@@ -248,8 +248,8 @@ body {
 .tab-article .tab-info-list .tab-info-item {
   display: none;
   line-height: 1.5;
-  font-size: 18px;
-  font-weight: 300;
+  font-size: 16px;
+  font-weight: 400;
 }
 .tab-article .tab-info-list .tab-info-item.now-on {
   display: block;
@@ -271,7 +271,11 @@ body {
 }
 .tab-title-article .tab-title {
   display: inline-block;
+  line-height: 1.45;
   font-size: 18px;
+  font-weight: 400;
+  /* vertical-align: top; */
+  letter-spacing: -0.01rem;
 }
 
 /* CONTENT PAGE >> engagement article */
@@ -327,14 +331,65 @@ body {
 }
 .article-channel-details .article-list-wrap {
 }
+.article-list-wrap .detail-item {
+}
+.article-list-wrap .detail-item.item-title {
+  line-height: 32px;
+}
+.article-list-wrap .detail-item.item-subs {
+  position: relative;
+  height: 38px;
+  margin-bottom: 8px;
+  line-height: 35px;
+  border: 1px solid #fafafa;
+  border-radius: 13px;
+  background-color: #fafafa;
+  overflow: hidden;
+  transition: 0.4s;
+  box-sizing: border-box;
+}
+.article-list-wrap .detail-item.item-subs::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 18px;
+  left: 12px;
+  transform: translateY(-50%);
+  width: 24px;
+  height: 24px;
+  background-image: url("../img/icon/icon_flip_arrow.svg");
+  background-position: center;
+  background-size: 10px;
+  background-repeat: no-repeat;
+  transition: 0.3s;
+}
+.article-list-wrap .detail-item.item-subs.now-on {
+  /* height: 100%; */
+  overflow: unset;
+  border: 1px solid #24cd88;
+}
+.article-list-wrap .detail-item.item-subs.now-on::before {
+  background-image: url("../img/icon/icon_flipped_arrow.svg");
+}
+
+.article-list-wrap .detail-item.item-subs:last-child {
+  margin-bottom: 0;
+}
 .article-list-wrap .detail-item > ul {
   width: 100%;
+  /* border-radius: 13px; */
+  border-radius: 13px 13px 0 0;
   font-size: 0;
+}
+.article-list-wrap .detail-item.item-subs.now-on .item-sub-list:first-child {
+  background-color: #f4f4f4;
 }
 .article-list-wrap .detail-item > ul > li {
   display: inline-block;
-  font-size: 15px;
+  font-size: 14px;
   text-align: center;
+  /* vertical-align: middle; */
+  vertical-align: top;
 }
 .article-channel-details .article-list-wrap .detail-item > ul > li {
   width: 12%;
@@ -343,8 +398,15 @@ body {
   .article-list-wrap
   .detail-item
   > ul
+  > li:nth-child(1) {
+  width: 14%;
+}
+.article-channel-details
+  .article-list-wrap
+  .detail-item
+  > ul
   > li:nth-child(2) {
-  width: 25%;
+  width: 23%;
 }
 .article-channel-details
   .article-list-wrap
@@ -360,11 +422,152 @@ body {
   color: #8b8d91;
 }
 .detail-item .detail-subs:first-child {
+  font-weight: 500;
   color: #313131;
+}
+.detail-item > .item-sub-list > .detail-subs > .chart-horizontal {
+  position: relative;
+  width: 100%;
+  padding: 6px 0;
+  box-sizing: border-box;
+}
+.detail-item
+  > .item-sub-list
+  > .detail-subs
+  > .chart-horizontal
+  > .total-posts {
+  width: 100%;
+  height: 26px;
+  background-color: #ebebeb;
+  border-radius: 8px;
+  overflow: hidden;
+}
+.detail-item
+  > .item-sub-list
+  > .detail-subs
+  > .chart-horizontal
+  > .total-posts
+  > .mid-posts {
+  /* width: 40%; */
+  width: 0;
+  height: 100%;
+  background-color: #617ff8;
+  transition: 0.3s;
+}
+.detail-item
+  > .item-sub-list.channel-subs-list
+  > .detail-subs
+  > .chart-horizontal
+  > .total-posts
+  > .mid-posts {
+  width: 0;
+  height: 100%;
+  background-color: #a0a0a0;
+  transition: 0.35s;
+}
+.detail-item
+  > .item-sub-list.channel-subs-list
+  > .detail-subs
+  > .chart-horizontal
+  > .total-posts
+  > .mid-posts
+  > .channel-posts {
+  display: block;
+  width: 0;
+  height: 100%;
+  background-color: #63eab1;
+  transition: 0.4s;
+}
+.detail-item > .item-sub-list > .detail-subs > .chart-horizontal > .posts-num {
+  display: inline-block;
+  position: absolute;
+  top: 50%;
+  right: 12px;
+  transform: translateY(-50%);
 }
 
 /* CONTENT PAGE >> sentiment article */
 
+/* CONTENT PAGE >> keyword ranking article */
+.article-rank-wrap {
+  width: 100%;
+}
+.article-rank-wrap .rank-list {
+  /* width: 100%; */
+}
+.article-rank-wrap .rank-list > .rank-item {
+  cursor: pointer;
+}
+.article-rank-wrap .rank-list > .item-title {
+  font-size: 0;
+  font-weight: 500;
+}
+.article-rank-wrap .rank-list > .item-subs {
+  margin-bottom: 6px;
+  border-radius: 10px;
+  font-size: 0;
+  background-color: #fafafa;
+}
+.rank-list > .rank-item > * {
+  display: inline-block;
+  font-size: 13px;
+  text-align: center;
+  line-height: 34px;
+}
+.rank-list > .rank-item > .item-standing {
+  width: 28%;
+}
+.rank-list > .rank-item > .item-keyword {
+  width: 36%;
+}
+.rank-list > .rank-item > .item-num {
+  width: 36%;
+}
+.rank-list > .rank-item.item-subs > .item-num {
+  color: #8b8d91;
+}
+
 /** CONTENT PAGE >> TREND PAGE **/
 
 /** CONTENT PAGE >> HOTTEST PAGE **/
+.article-hottest-wrap > .hottest-list {
+  width: 100%;
+}
+.article-hottest-wrap > .hottest-list > .hottest-item {
+  margin-bottom: 8px;
+  font-size: 0px;
+}
+.hottest-item > .icon-area,
+.hottest-item > .contents-area {
+  display: inline-block;
+}
+.hottest-item > .icon-area {
+  width: 26px;
+  height: 26px;
+  margin-right: 10px;
+  vertical-align: middle;
+  background-image: url("../img/icon/icon-cafe-naver.svg");
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+.hottest-item > .contents-area {
+  display: inline-block;
+  width: calc(100% - 36px);
+  height: 34px;
+  background-color: #fafafa;
+  font-size: 0;
+}
+.hottest-item > .contents-area > * {
+  display: inline-block;
+  font-size: 13px;
+}
+.hottest-item > .contents-area > .item-name {
+  width: 56%;
+}
+.hottest-item > .contents-area > .item-post-num {
+  width: 22%;
+}
+.hottest-item > .contents-area > .item-engagement {
+  width: 22%;
+}
