--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -430,6 +430,34 @@ address > .copyright {
   margin-top: 6px;
 }
 
+/** ASIDE **/
+/* ASIDE >> goTop 버튼 */
+#goTop {
+  position: fixed;
+  bottom: 120px;
+  right: 6vw;
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  background-color: #fff;
+  border: none;
+  box-shadow: 1px 3px 12px rgba(88, 88, 88, 0.2);
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer;
+}
+#goTop > .go-top-btn {
+  width: 100%;
+  height: 100%;
+}
+#goTop > .go-top-btn > img {
+  width: 17px;
+  margin-top: 13px;
+}
+#goTop:hover > .go-top-btn > img {
+}
+
+/* ASIDE >> MODAL */
 #modal {
   position: relative;
   z-index: 300;
