--- a/src/css/style.css
+++ b/src/css/style.css
@@ -208,6 +208,7 @@ body {
 }
 .intro-keyword-now .rank-item .item-title {
   width: 60%;
+  white-space: nowrap;
 }
 
 /** CONTENT PAGE **/
@@ -522,13 +523,14 @@ body {
   line-height: 34px;
 }
 .rank-list > .rank-item > .item-standing {
-  width: 28%;
+  width: 26%;
 }
 .rank-list > .rank-item > .item-keyword {
-  width: 36%;
+  width: 40%;
+  white-space: nowrap;
 }
 .rank-list > .rank-item > .item-num {
-  width: 36%;
+  width: 34%;
 }
 .rank-list > .rank-item.item-subs > .item-num {
   color: #8b8d91;
@@ -569,9 +571,11 @@ body {
 .trend-rank-list .rank-list > .rank-item > .item-keyword {
   width: 36%;
   letter-spacing: -0.05rem;
+  white-space: nowrap;
 }
 .trend-rank-list .rank-list > .rank-item > .item-num {
   width: 28%;
+  white-space: nowrap;
 }
 .trend-rank-list .rank-list > .rank-item > .item-move {
   width: 20%;
@@ -708,15 +712,20 @@ body {
   font-size: 13px;
 }
 .hottest-item > .contents-area > .item-name {
-  width: 48%;
+  width: 52%;
 }
 .hottest-item.item-subs > .contents-area > .item-name {
   text-align: left;
   padding-left: 14px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 .hottest-item > .contents-area > .item-post-num,
 .hottest-item > .contents-area > .item-engagement {
-  width: 26%;
+  width: 22%;
+  vertical-align: top;
+  white-space: nowrap;
 }
 .hottest-item.item-subs > .contents-area > .item-post-num,
 .hottest-item.item-subs > .contents-area > .item-engagement {
