--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -486,13 +486,16 @@ address > .copyright {
 
 /* MODAL >> 컨텐츠 원문 리스트 모달 */
 #showAllModal {
-  /* display: none; */
+  display: none;
   position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.1);
+}
+#showAllModal.modalOn {
+  display: block;
 }
 
 #showAllModal > .show-all-wrap {
@@ -510,6 +513,245 @@ address > .copyright {
 }
 .show-all-wrap > .show-all-inner {
 }
+.show-all-inner > .show-all-top {
+  height: 35px;
+  line-height: 35px;
+  margin-bottom: 14px;
+}
+.show-all-top .show-all-top-left {
+  float: left;
+  height: 100%;
+}
+.show-all-top .show-all-top-right {
+  float: right;
+  height: 100%;
+  position: relative;
+  /* margin-right: 50px; */
+}
+.show-all-top > div > * {
+  display: inline-block;
+}
+.show-all-top-left .show-all-title {
+  display: inline-block;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 35px;
+  vertical-align: top;
+}
+.show-all-top-left .sort-option {
+  position: relative;
+  display: inline-block;
+  margin-left: 14px;
+  text-align: right;
+}
+.show-all-top-left .sort-option::after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  top: 43%;
+  right: -17px;
+  transform: translate(-50%, -50%) rotate(45deg);
+  width: 6px;
+  height: 6px;
+  border-right: 1px solid #888;
+  border-bottom: 1px solid #888;
+}
+.show-all-top-left .sort-option.open::after {
+  top: 63%;
+  transform: translate(-50%, -50%) rotate(-135deg);
+}
+.sort-option .option-list {
+  height: 0;
+  overflow: hidden;
+}
+
+.show-all-top-right .search-input {
+  display: inline-block;
+  width: 290px;
+  height: 100%;
+  margin-right: 18px;
+  vertical-align: top;
+}
+.show-all-top-right .search-input > input {
+  width: 100%;
+  height: 34px;
+}
+.show-all-top-right .file-down-btn {
+  width: 34px;
+  height: 34px;
+  margin-right: 10px;
+  border-radius: 10px;
+  text-align: center;
+  /* margin-top: 7px; */
+  /* margin-right: 12px; */
+}
+.show-all-top-right .file-down-btn .file-down {
+  width: 24px;
+  height: 24px;
+  margin: 6px;
+  background-color: #fff;
+  background-image: url("../img/icon/icon-file.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  border: none;
+}
+.show-all-top-right .file-down-btn:hover {
+  box-shadow: 1px 3px 12px rgba(128, 128, 128, 0.2);
+}
+.show-all-top-right .file-down-btn:hover .file-down {
+  background-image: url("../img/icon/icon-file-24cd88.svg");
+}
+.show-all-top-right .modal-cls-btn {
+  vertical-align: top;
+}
+#modal .cls-btn {
+  position: relative;
+  top: unset;
+  right: unset;
+}
+
+.show-all-inner > .show-all-content {
+  width: 100%;
+}
+
+.show-all-content > .content-title-wrap {
+  width: 100%;
+  margin-bottom: 8px;
+}
+.show-all-content .title-list {
+  display: inline-block;
+  width: calc(100% - 83px);
+  font-size: 0;
+}
+.show-all-content .title-list > .title-item {
+  display: inline-block;
+  font-size: 13px;
+  text-align: center;
+}
+.show-all-content .title-channel {
+  display: inline-block;
+  width: 50px;
+}
+.show-all-content .title-name {
+  width: 45%;
+}
+.show-all-content .title-date {
+  width: 14%;
+}
+.show-all-content .title-views {
+  width: 10%;
+}
+.show-all-content .title-likes {
+  width: 9%;
+}
+.show-all-content .title-comments {
+  width: 8.5%;
+}
+.show-all-content .title-shares {
+  width: 9%;
+}
+.show-all-content .title-icon {
+  width: 3%;
+}
+
+.show-all-content > .content-all-wrap {
+  /* max-height: 630px; */
+  border-radius: 13px;
+  background-color: #f5f5f5;
+  overflow: hidden;
+}
+.show-all-content .content-list {
+  width: 100%;
+  height: 610px;
+  padding: 14px 15px 10px 10px;
+  overflow-y: scroll;
+}
+.show-all-content .content-item {
+  height: 53px;
+  margin-bottom: 8px;
+  font-size: 0;
+  cursor: pointer;
+}
+.show-all-content .content-item > .content-channel {
+  display: inline-block;
+  width: 40px;
+  /* height: 24px; */
+  height: 100%;
+  background-image: url("../img/icon/icon-blog-naver.svg");
+  background-repeat: no-repeat;
+  background-position: 5px center;
+  background-size: 22px;
+}
+.show-all-content .content-item > .content-channel.sns-insta {
+  background-image: url("../img/icon/icon-instagram.svg");
+}
+.show-all-content .content-item > .content-channel.sns-twitter {
+  background-image: url("../img/icon/icon-twitter.svg");
+}
+.show-all-content .content-item > .content-channel.cafe-naver {
+  background-image: url("../img/icon/icon-cafe-naver.svg");
+}
+.show-all-content .content-item > .content-channel.blog-naver {
+  background-image: url("../img/icon/icon-blog-naver.svg");
+}
+
+.show-all-content .content-item > .content-subs-list {
+  display: inline-block;
+  width: calc(100% - 40px);
+  height: 100%;
+  padding: 8px 14px 8px 18px;
+  border: 1px solid #fff;
+  border-radius: 13px;
+  background-color: #fff;
+  box-shadow: 1px 3px 12px rgba(88, 88, 88, 0.2);
+  font-size: 0;
+  vertical-align: top;
+}
+.show-all-content .content-item:hover > .content-subs-list {
+  border: 1px solid #24cd88;
+}
+.show-all-content .content-item .content-subs-item {
+  display: inline-block;
+  font-size: 14px;
+  line-height: 35px;
+  color: #888;
+  text-align: center;
+  vertical-align: middle;
+}
+.show-all-content .content-item .content-name {
+  /* display: -webkit-inline-box; */
+  display: inline-block;
+  width: 45%;
+  /* height: 35px; */
+  color: #313131;
+  text-align: left;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  /* -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical; */
+  box-sizing: border-box;
+  vertical-align: middle;
+  overflow: hidden;
+}
+.show-all-content .content-item .content-date {
+  width: 14%;
+}
+.show-all-content .content-item .content-views {
+  width: 11%;
+}
+.show-all-content .content-item .content-likes {
+  width: 9%;
+}
+.show-all-content .content-item .content-comments {
+  width: 9%;
+}
+.show-all-content .content-item .content-shares {
+  width: 9%;
+}
+.show-all-content .content-item .content-icon {
+  width: 3%;
+}
 
 /* MODAL >> 원문 내용 모달 */
 #showOriginModal {
@@ -520,4 +762,129 @@ address > .copyright {
   bottom: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.1);
+}
+#showOriginModal.modalOn {
+  display: block;
+}
+#showOriginModal > .show-origin-wrap {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 680px;
+  /* max-height: 640px; */
+  padding: 20px 20px 24px;
+  background-color: #fff;
+  border-radius: 18px;
+  box-shadow: 1px 3px 12px rgba(88, 88, 88, 0.2);
+  overflow: hidden;
+}
+.show-origin-inner > .show-origin-top {
+  height: 35px;
+  line-height: 35px;
+  margin-bottom: 14px;
+}
+.show-origin-top > .origin-top-info {
+  display: inline-block;
+  width: calc(100% - 50px);
+}
+.show-origin-top .origin-channel {
+  float: left;
+  color: #676767;
+}
+.show-origin-top .origin-top-right {
+  float: right;
+  color: #aaa;
+  vertical-align: top;
+}
+.show-origin-top > #clsOriginList {
+  float: right;
+  /* display: inline-block; */
+  position: relative;
+  vertical-align: top;
+}
+
+.show-origin-inner > .show-origin-content {
+  width: 100%;
+  margin-bottom: 18px;
+}
+.show-origin-content > .origin-content-title {
+  margin-bottom: 14px;
+}
+.show-origin-content > .origin-content-title > h3 {
+  margin-bottom: 8px;
+  font-size: 18px;
+  font-weight: 600;
+}
+.show-origin-content > .origin-content-title > .origin-link-wrap {
+}
+.origin-link-wrap > .origin-link {
+  display: inline-block;
+  font-size: 13px;
+  color: #676767;
+}
+.origin-link-wrap > .go-origin {
+  display: inline-block;
+  margin-left: 10px;
+  font-size: 12px;
+  color: #aaa;
+}
+.origin-link-wrap > .go-origin > a {
+  display: inline-block;
+}
+.origin-link-wrap > .go-origin > a > img {
+  margin-left: 4px;
+  width: 10px;
+  vertical-align: -1px;
+}
+.show-origin-content > .origin-content-subs {
+  min-height: 140px;
+  max-height: 400px;
+  padding: 14px 15px;
+  line-height: 1.4;
+  background-color: #f5f5f5;
+  border-radius: 13px;
+  word-break: keep-all;
+  color: #676767;
+  overflow-y: auto;
+}
+
+.show-origin-inner > .show-origin-bottom {
+  width: 100%;
+}
+.show-origin-bottom > .origin-info-list {
+}
+.origin-info-list > .origin-info-item {
+  display: inline-block;
+  position: relative;
+  padding-right: 18px;
+  margin-right: 14px;
+}
+.origin-info-list > .origin-info-item::after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  top: 52%;
+  right: 0;
+  transform: translateY(-50%);
+  width: 1px;
+  height: 12px;
+  background-color: #aaa;
+}
+.origin-info-list > .origin-info-item:last-child {
+  padding-right: 0px;
+  margin-right: 0px;
+}
+.origin-info-list > .origin-info-item:last-child::after {
+  display: none;
+}
+.origin-info-list > .origin-info-item > * {
+  display: inline-block;
+}
+.origin-info-item > .info-title {
+  margin-right: 10px;
+  color: #313131;
+}
+.origin-info-item > .info-num {
+  color: #888;
 }
