--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -659,6 +659,7 @@ address > .copyright {
   /* max-height: 630px; */
   border-radius: 13px;
   background-color: #f5f5f5;
+  box-shadow: inset 1px -1px 6px rgba(88, 88, 88, 0.1);
   overflow: hidden;
 }
 .show-all-content .content-list {
@@ -818,21 +819,25 @@ address > .copyright {
 }
 .show-origin-content > .origin-content-title > .origin-link-wrap {
 }
-.origin-link-wrap > .origin-link {
+.origin-link-wrap .origin-link {
   display: inline-block;
   font-size: 13px;
   color: #676767;
 }
-.origin-link-wrap > .go-origin {
+.origin-link-wrap:hover .origin-link {
+  text-decoration: underline;
+  color: #24cd88;
+}
+.origin-link-wrap .go-origin {
   display: inline-block;
   margin-left: 10px;
   font-size: 12px;
   color: #aaa;
 }
-.origin-link-wrap > .go-origin > a {
+.origin-link-wrap > a {
   display: inline-block;
 }
-.origin-link-wrap > .go-origin > a > img {
+.origin-link-wrap .go-origin > img {
   margin-left: 4px;
   width: 10px;
   vertical-align: -1px;
@@ -887,4 +892,18 @@ address > .copyright {
 }
 .origin-info-item > .info-num {
   color: #888;
+}
+
+@media all and (max-width: 1024px) {
+}
+
+@media all and (max-width: 768px) {
+}
+
+@media all and (max-width: 480px) {
+  /** FOOTER 480px **/
+  .footer-inner {
+    max-width: unset;
+    min-width: unset;
+  }
 }
